@@ -640,6 +640,9 @@ OCaml 4.12.0
   (Gabriel Scherer, review by Thomas Refis and Leo White,
    report by Nicolás Ojeda Bär)
 
+- #10048: Fix bug with generalized local opens.
+  (Leo White, review by Thomas Refis)
+
 OCaml 4.11.1
 ------------
 
